# UnreachablePlaces

./: .gitignore  CLI_COMMANDS.md  CONTRIBUTING.md  COST_DISTANCE_DESIGN.md  COST_DISTANCE_RESULTS.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_COST_DISTANCE.md  README.md  SWITCH_STATES.md  TERRAIN_DATA.md  VENV_NOTES.md  check_pa_size.py  config.yaml  download_terrain_data.py  main.py  pyproject.toml  requirements.txt  setup.sh
notebooks/: example_usage.md
scripts/: download_dem_opentopo.py  download_srtm_tiles.py  download_terrain.sh  download_terrain_gdal.py
src/: __init__.py  analyze.py  cli.py  config.py  cost_surface.py  distance.py  extract_terrain.py  fetch.py  preprocess.py  visualize.py
